--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,16 @@ tqdm==4.66.4
 numpy==1.26.4
 PyPDF2==3.0.1.
 streamlit
+requests
+streamlit-authenticator  # if you are using it
+python-dotenv
+toml
+openai
+google-api-python-client 
+google-auth 
+google-auth-httplib2 
+google-auth-oauthlib
+pandas
+gspread
+oauth2client
+plotly
