--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 openai>=1.0.0
-chromadb==0.4.24
 pdfplumber==0.10.2
 tqdm==4.66.4
 numpy==1.26.4
@@ -18,3 +17,9 @@ pandas
 gspread
 oauth2client
 plotly
+chromadb==0.4.14
+uvicorn
+fastapi
+h11
+lz4
+duckdb
