--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ openai>=1.0.0
 pdfplumber==0.10.2
 tqdm==4.66.4
 numpy==1.26.4
-PyPDF2==3.0.1.
+PyPDF2==3.0.1
 streamlit
 requests
 streamlit-authenticator  # if you are using it
